Login: fix size of fields to align better.
Resolves #6495

--- a/application/views/themes/default/css/base-sass/common.sass
+++ b/application/views/themes/default/css/base-sass/common.sass
@@ -223,6 +223,10 @@ input
 		border: 1px solid $border-color-dark
 		padding: 3px 6px
 
+
+.login_field
+	width: 200px
+
 #global_notifications
 	background: $general_background_color
 	border: 1px solid $border_color_light
